--- a/Dokumentation/ads/header.tex
+++ b/Dokumentation/ads/header.tex
@@ -72,6 +72,7 @@
 %\usepackage[printonlyused,footnote]{acronym}
 \usepackage{acronym}
 
+\usepackage{adjustbox}
 
 %\usepackage{algorithm}
 \usepackage[Algorithmus]{algorithm}
