--- a/Dokumentation/einstellungen.tex
+++ b/Dokumentation/einstellungen.tex
@@ -14,7 +14,7 @@
 %% der entsprechenden Sprache angezeigt, sondern auch weitere
 %% Aspekte angepasst, wie z.B. die Anführungszeichen und
 %% Datumsformate.
-\setzesprache{de} % oder en
+\setzesprache{en} % oder en
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% Angaben  %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -23,7 +23,7 @@
 %% des Dokuments.
 \setzemartrikelnr{8540946; XXX}
 \setzekurs{STG-TINF17-ITA}
-\setzetitel{Dokumentation Parkassist}
+\setzetitel{Documentation Parkassist}
 \setzedatumAbgabe{07.04.2020}
 \setzefirma{Daimler AG}
 \setzefirmenort{Stuttgart}
