--- a/Dokumentation/ads/acronyms.tex
+++ b/Dokumentation/ads/acronyms.tex
@@ -12,7 +12,7 @@
 %	
 \begin{acronym}[YTMMM]
 \setlength{\itemsep}{-\parsep}
-\acro{AABB}{Axis-Aligned Bounding Box}
+\acro{NaN}{Not a Number}
 
 
 \end{acronym}
