--- a/Dokumentation/content/Content.tex
+++ b/Dokumentation/content/Content.tex
@@ -2,6 +2,8 @@
 
 \chapter{Introduction}\label{cha:Introduction}
 ??
+matlab version
+ascet version
 \chapter{D1: Time estimate based on three point estimation}\label{cha:D1}
 \begin{table}[H]
 \centering
@@ -56,7 +58,14 @@ In this section the provided human velocity profile is analysed in order to find
 velocity_data = importdata('MeasuredVelocities.txt');
 \end{lstlisting}
 
-\textbf{2. Data preparation} \\ Before analysing the data it is necessary to preprocess it. First the four velocities of each wheel are extracted from the measurement data and a mean velocity is calculated (see line 1,2). The mean velocity is converted to [m/s] for further calculations. For analysing the braking behaviour the acceleration is calculated. This can be done by differentiating the velocity (see line 11). As can be seen in Figure REF in the upper plot the calculated acceleration is ?? as cause of minor variations in the velocity. Due to the ?? it would be hard to analyse the braking behaviour. Therefore, we used a moving average filter to smoothen the data (line 8). A moving average filter is calculating a mean value of neighbourhood elements within a sliding window of a predefined size. Applying a moving average filter results in a smoother graph as can bee seen in the lower plot in Figure REF.
+\textbf{2. Data preparation} \\ Before analysing the data it is necessary to preprocess it. First the four velocities of each wheel are extracted from the measurement data and a mean velocity is calculated (see line 1,2). 
+
+\begin{equation}
+	v_{car} = (v_{w1} +v_{w2} + v_{w3} +v_{w4})*4
+\end{equation}
+
+
+The mean velocity is converted to [m/s] for further calculations. For analysing the braking behaviour the acceleration is calculated. This can be done by differentiating the velocity (see line 11). As can be seen in Figure REF in the upper plot the calculated acceleration is ?? as cause of minor variations in the velocity. Due to the ?? it would be hard to analyse the braking behaviour. Therefore, we used a moving average filter to smoothen the data (line 8). A moving average filter is calculating a mean value of neighbourhood elements within a sliding window of a predefined size. Applying a moving average filter results in a smoother graph as can bee seen in the lower plot in Figure REF.
 
 \begin{lstlisting}[basicstyle=\scriptsize	,caption= Preprocessing measurement data,label= lst:D3Preprocess]
 %compute mean velocity of all 4 wheels
@@ -131,8 +140,33 @@ Considering Figures REF, REF and REF, it can be seen that the acceleration is ap
 %dann extrahieren der negativen beschleunigungen
 
 \chapter{D4*: Consideration of uneven parking spaces}\label{cha:D4}
+-diagram
+
+-forces need to be considered (hangabtriebskraft)
+
+-negative slope would increase stopping time and position
+
+-positive slope would make stopping time shorter
+
+-negative slope critical since collision could occur
+
+-therefore brake power would have to be increased or decreased
+
+-physical borders need to be considered
+
+-also when the car is stopped it should not start to roll forwards or backwards.
+On a plain surface, the brake can be released, after the car is stopped.
+A brake assist on a positive or negative slope would need to keep holding the brake or engaging the handbrake.
+
+In the model without a minimum velocity, the velocity would become negative on braking instead of the car coming to a full stop.
 
 \chapter{D5: Discussion of inaccuracies in velocity measurement}\label{cha:D5}
+-inaccuracy of velocity +- 0.1 km/h
+-also minimal velocity is 0.29 km/h which is not realistic, because velocity does not drop from 0.29 km/h to zero
+-in human velocity profile 4 tire velocities recorded
+-mean used to compute car velocity
+-because of inaccuracy in velocity computed acceleration also has inaccuracy
+-car driving around corner
 validate findings by numbers from simulation
 
 \chapter{D6: Implementation of pulse signal in Simulink}\label{cha:D6}
@@ -142,11 +176,17 @@ validate findings by numbers from simulation
 \chapter{D8: Implementation of pule signal in ASCET}\label{cha:D8}
 
 \chapter{D9: Implementation of unit tests for ASCET model parts}\label{cha:D9}
-
+-modular design for unit tests
 \chapter{D10: Development and implementation of a system test environment for ASCET simulation}\label{cha:D10}
 
 \chapter{D11*: Plausibility check comparing measured velocities and distances}\label{cha:D11}
+-statistically independent ultrasonic distance and velocity
+-if distance to next object for ultrasonic sensor is known
 
+-al
 \chapter{D13*: Impact of inaccuracies}\label{cha:D13}
-
+-ultrasonic measurement: what if object is round?
+-
 \chapter{D14*: Reflection}\label{cha:D14}
+-only 2 meter stop considered
+-model not realistic
